// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render modal properly 1`] = `
<Modal
  contentLabel="users.update"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      users.update
    </h2>
  </header>
  <div
    className="modal-body modal-container"
  >
    <SelectList
      elements={
        Array [
          "foo",
        ]
      }
      needToReload={false}
      onSearch={[Function]}
      onSelect={[Function]}
      onUnselect={[Function]}
      renderElement={[Function]}
      selectedElements={
        Array [
          "foo",
        ]
      }
      withPaging={true}
    />
  </div>
  <footer
    className="modal-foot"
  >
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      Done
    </ResetButtonLink>
  </footer>
</Modal>
`;

exports[`should render modal properly 2`] = `
<div
  className="select-list-list-item"
>
  test1
</div>
`;

exports[`should render modal properly 3`] = `
<div
  className="select-list-list-item"
>
  test_foo
</div>
`;
